# note-liber

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: app.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: index.ts
src/components/addnote/: addnote.type.ts  index.tsx  style.css
src/components/button/: button.type.ts  index.tsx  styles.css
src/components/dropdown/: dropdown.type.ts  index.tsx  styles.css
src/components/floatingmenu/: foatingmenu.type.ts  index.tsx
src/components/input/: index.tsx  input.type.ts  styles.css
src/components/popover/: index.tsx  popover.type.ts  styles.css
src/components/setlink/: index.tsx  setlink.type.ts  styles.css
src/components/sidebar/: index.tsx  sidebar.type.ts  styles.css
src/components/tabs/: index.tsx  styles.css  tabs.type.ts
src/components/tiptap/: index.tsx  styles.css
src/components/toggle/: index.tsx  styles.css  toggle.type.ts
src/components/toolbar/: index.tsx  styles.css  toolbar.type.ts
src/components/toolbar/modules/: index.tsx
src/components/trayaction/: index.tsx  styles.css  trayaction.type.ts
src/functions/: fetchNotes.tsx  index.ts  notDuplicateNote.tsx
src/hooks/: index.ts  usePopoverOpen.hook.tsx
src/schema/: form.schema.tsx  index.ts
src/styles/: globals.css
