[package]
name = "note-liber"
version = "1.0.0"
description = "Note Liber is a simple sticky notes app for Linux."
authors = ["Afio Vinícius"]
edition = "2021"

[lib]

name = "note_liber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"

[profile.dev]
incremental = true 

[profile.release]
codegen-units = 1 
lto = true 
opt-level = "s" 
panic = "abort" 
strip = true 



